--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   intl: ^0.16.1
   toggle_switch: "^0.1.8"
   functional_widget_annotation: ^0.5.0
+  flutter_spinkit: "^4.1.2"
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
