--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,10 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 29
 
+    dexOptions {
+        javaMaxHeapSize "2g"
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
