--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   toggle_switch: "^0.1.8"
   functional_widget_annotation: ^0.5.0
   flutter_spinkit: "^4.1.2"
+  pin_code_fields: ^6.1.0
  
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,6 +59,7 @@ flutter:
   assets:
 
      - assets/images/parker.jpg
+     - assets/images/verify.png
      
 
   # To add assets to your application, add an assets section, like this:
